--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/blog-style.css">
+	<link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/engraving-2030295-1710434.png">
 </head>
 <body>
 	<div id="page-loader" class="page-loader"></div>
